# pyDoomMap

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/wad/: mapdata.py  wadfile.py
test/: test_mapdata.py  test_wadfile.py
